--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,8 @@
+title: Heather Blackwood's Portfolio
+#logo: /assets/img/logo.png
+# description text bwlow image
 
+# next line is if I allow othrs to download my code
+# show_downloads: true
+theme: jekyll-theme-minimal
+#theme: Cayman
