--- a/_config.yml
+++ b/_config.yml
@@ -4,5 +4,5 @@ title: Heather Blackwood's Portfolio
 
 # next line is if I allow othrs to download my code
 # show_downloads: true
-theme: jekyll-theme-minimal
+theme: jekyll-theme-cayman
 #theme: Cayman
